#682 View sidebar is now working properly!

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -1,4 +1,4 @@
-<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable pl-2" data-id="{{id}}">
+<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable pl-2" data-id="{{id}}" style="">
     <div class="row no-gutters">
         <div class="col-auto pt-1">
             <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
@@ -37,7 +37,7 @@
         </div>
 
         <div class="col-auto px-2 py-1">
-            <h5 class="card-title map_killzonessidebar_killzone_text {{text-class}} pt-1">
+            <h5 class="map_killzonessidebar_killzone_text {{text-class}} pt-1">
                 <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_cumulative" data-toggle="tooltip"></span>
 <!--                <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_container">-->
 <!--                            (<span class="text-success" id="map_killzonessidebar_killzone_{{id}}_enemy_forces"></span>)-->
