--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_enemy_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_enemy_template.handlebars
@@ -2,7 +2,7 @@
     <div class="row no-gutters">
         <div class="col">
             <img src="/images/enemyportraits/{{id}}.png" style="height: 37px; width: 37px; border-radius: 30px; border: 2px solid {{pull_color}}"/>
-            <div class="text-center" style="position: relative; margin-top: -23px; text-shadow: black 1px 1px;">
+            <div class="text-center text-white" style="position: relative; margin-top: -23px; text-shadow: black 1px 1px;">
                 {{count}}x
             </div>
         </div>
