#712 Killzones are now connected by paths in the preview. The Z-index needs to be fixed though, it is rendering behind enemies which is not useful atm.

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -51,7 +51,7 @@
 
         </div>
 
-        <div class="row mb-1">
+        <div class="row pb-1">
             <div class="col">
                 <div class="input-group">
                     <div id="map_killzonessidebar_killzone_{{id}}_kill_area_label"
