#724 Resolved a few issues with the redesign site - feedback from Reddit!

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -1,4 +1,4 @@
-<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable pl-2" data-id="{{id}}" style="">
+<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable px-1" data-id="{{id}}" style="">
     <div class="row no-gutters">
         <div class="col-auto pt-1">
             <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
