--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
@@ -1,4 +1,4 @@
-<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable pl-2" data-id="{{id}}">
+<div id="map_killzonessidebar_killzone_{{id}}" class="map_killzonessidebar_killzone selectable px-1" data-id="{{id}}">
     <div class="row no-gutters">
         <div class="col-auto pt-1">
             <h5 class="map_killzonessidebar_killzone_text {{text-class}}">
