--- a/resources/assets/js/handlebars/map_killzonessidebar_floor_switch_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_floor_switch_row_template.handlebars
@@ -1,4 +1,4 @@
-<div id="map_killzonessidebar_floor_switch_{{id}}" class="map_killzonessidebar_floor_switch"
+<div id="map_killzonessidebar_floor_switch_{{id}}" class="map_killzonessidebar_floor_switch py-1"
      data-id="{{target_floor_id}}">
     <div class="row no-gutters">
         <div style="width: 50px;">
@@ -10,6 +10,6 @@
                 {{/if}}
             />
         </div>
-        <h6 class="pl-2 m-0">{{name}}</h6>
+        <h6 class="pl-2 pt-1 m-0">{{name}}</h6>
     </div>
 </div>
