--- a/resources/assets/sass/home/main.scss
+++ b/resources/assets/sass/home/main.scss
@@ -977,11 +977,6 @@
       padding-right: 16px;
     }
 
-    .row {
-      margin-left: -16px;
-      margin-right: -16px;
-    }
-
     .row > [class*="col"] {
       padding-left: 16px;
       padding-right: 16px;
@@ -1025,6 +1020,16 @@
     padding: 0;
     top: 0;
     left: -2400px;
+  }
+
+  .demo-loader {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      top: 0;
+      z-index: 1;
+      opacity: 0.6;
   }
 
 }
