#734 Added a popup to notify users of new releases one time when they visit the site (only on minor/major releases, no bugfixes).

--- a/resources/assets/css/general.css
+++ b/resources/assets/css/general.css
@@ -98,11 +98,7 @@
 }
 
 @media (min-width: 900px) {
-    .login-modal-dialog {
-        max-width: 900px;
-    }
-
-    .register-modal-dialog {
+    .modal-dialog-small {
         max-width: 900px;
     }
 
@@ -113,11 +109,7 @@
 
 /** Hide the separating border between login/register when on a small screen, when they're stacked vertically */
 @media (max-width: 900px) {
-    .login-modal-dialog .border-left.border-white {
-        border: none !important;
-    }
-
-    .register-modal-dialog .border-left.border-white {
+    .modal-dialog-small .border-left.border-white {
         border: none !important;
     }
 }
