#776 Added enemy forces to tooltips of enemies in the pulls sidebar

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_enemy_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_enemy_template.handlebars
@@ -1,4 +1,4 @@
-<div class="col-auto" data-toggle="tooltip" title="{{name}}">
+<div class="col-auto" data-toggle="tooltip" title="{{name}} (+{{enemy_forces}}/+{{enemy_forces_percent}}%)">
     <div class="row no-gutters">
         <div class="col">
             <img src="/images/enemyportraits/{{id}}.png" style="height: 37px; width: 37px; border-radius: 30px; border: 2px solid {{pull_color}}"/>
