#778 Anonymous users are now displayed a bit better in the header when viewing a map.

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -359,6 +359,7 @@ html, body, #map, #app, .wrapper {
     padding: 0 !important;
     width: 30px;
     height: 30px;
+    font-size: 1.15rem;
 }
 
 .theme .echo_user {
