#789 Bugfixes found on staging

--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -306,7 +306,7 @@ html, body, #map, #app, .wrapper {
 }
 
 #pulls_sidebar .map_killzonessidebar_floor_switch h6 {
-    font-size: 1.1em;
+    font-size: 1.1rem;
 }
 
 #pulls_sidebar .map_killzonessidebar_floor_switch,
