--- a/resources/assets/js/handlebars/map_killzonessidebar_floor_switch_row_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_floor_switch_row_template.handlebars
@@ -10,6 +10,6 @@
                 {{/if}}
             />
         </div>
-        <h6 class="pl-2 pt-1 m-0">{{name}}</h6>
+        <h6 class="pl-2 m-0">{{name}}</h6>
     </div>
 </div>
