#789 Final bugfixes found on staging

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -3,7 +3,7 @@
     <div class="row no-gutters">
         <div class="col">
             <div class="row no-gutters">
-                <div class="col-auto pt-1">
+                <div class="col-auto py-1">
                     <button id="map_killzonessidebar_killzone_{{id}}_expand" type="button"
                             class="btn btn-primary collapsed" aria-pressed="false" data-toggle="collapse"
                             data-target="#map_killzonessidebar_killzone_{{id}}_toggle_target">
