--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -352,16 +352,19 @@ html, body, #map, #app, .wrapper {
     padding: 0 !important;
 }
 
-#edit_route_echo_members_container .list-group-item,
-#edit_route_echo_status_container .list-group-item {
+#edit_route_echo_members_container .list-group-item:not(.separator),
+#edit_route_echo_status_container .list-group-item:not(.separator) {
     background-color: inherit;
     width: 36px;
     height: 36px;
 }
 
+.theme #edit_route_echo_members_container button i {
+    font-size: 1.15rem;
+}
 
-.theme #edit_route_echo_members_container .list-group-item .nav-link,
-.theme #edit_route_echo_members_container .list-group-item .nav-link img {
+.theme #edit_route_echo_members_container .dropdown .nav-link,
+.theme #edit_route_echo_members_container .dropdown .nav-link img {
     padding: 0 !important;
     width: 30px;
     height: 30px;
