--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -600,6 +600,14 @@ html, body, #map, #app, .wrapper {
     border-color: red !important;
 }
 
+.user_mouse_position {
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+
 .map_icon.leaflet-edit-marker-selected.leaflet-marker-icon {
     border: unset;
     background-color: unset;
