--- a/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
@@ -1,4 +1,4 @@
-<div class="user_mouse_location" style="width: calc(8px + {{width}}px); height: calc(8px + {{height}}px);">
+<div class="inner echo_user_{{user_id}}" style="width: calc(8px + {{width}}px); height: calc(8px + {{height}}px);">
     <div class="container">
         {{#ifCond avatar_url '==' null}}
             {{initials}}
