#404 Fixed long titles/descriptions for routes messing up the page layout in the various overview pages.

--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -167,7 +167,8 @@
 }
 
 @media (min-width: 1200px) {
-    .discover .card_dungeonroute {
+    .discover .card_dungeonroute,
+    .discover .card_dungeonroute .col {
         max-height: 192px;
     }
 
