#404 Tidied up the mouse icons for each participant (icon or initials).

--- a/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_visual_template.handlebars
@@ -1,3 +1,3 @@
-<div class="map_icon {{key}} {{selectedclass}}" style="width: calc(8px + {{width}}px); height: calc(8px + {{height}}px);">
+<div class="map_icon {{key}} {{selectedclass}}" style="width: {{width}}px; height: {{height}}px;">
     <img src="/images/mapicon/{{key}}.png" style="width: {{width}}px; height: {{height}}px;"/>
 </div>
