--- a/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
+++ b/resources/assets/js/handlebars/map_user_mouse_position_visual_template.handlebars
@@ -1,7 +1,9 @@
-<div class="inner echo_user_{{user_id}}" style="width: calc(8px + {{width}}px); height: calc(8px + {{height}}px);">
+<div class="inner echo_user_{{user_id}} text-center" style="width: {{width}}px; height: {{height}}px;">
     {{#ifCond avatar_url '==' null}}
-        {{initials}}
+        <div class="w-100 h-100" style="font-size: {{textWidth}}px; padding: 2px;">
+            {{initials}}
+        </div>
     {{else}}
-        <img src="{{avatar_url}}" alt="{{initials}}" style="width: {{width}}px; height: {{height}}px;"/>
+        <img src="{{avatar_url}}" alt="{{initials}}" style="width: calc({{width}}px - 6px); height: calc({{height}}px - 6px);"/>
     {{/ifCond}}
 </div>
